client/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

nav {
    position: relative;
    z-index: 1000; /* Ensure this is higher than other elements */
}
.text-shadow {
    text-shadow: 2px 1px 4px rgba(0, 0, 0, 0.4); /* Adjust values as needed */
  }

/* Target the scrollbar track */
.overflow-y-scroll::-webkit-scrollbar {
width: 12px; /* Width of the vertical scrollbar */
height: 12px; /* Height of the horizontal scrollbar */
}

/* Background of the scrollbar track */
.overflow-y-scroll::-webkit-scrollbar-track {
background: #111827;
border-radius: 10px;
}

/* Thumb (scroll indicator) styling */
.overflow-y-scroll::-webkit-scrollbar-thumb {
background: #888;
border-radius: 10px;
}

/* Thumb hover effect */
.overflow-y-scroll::-webkit-scrollbar-thumb:hover {
background: #555;
}
button, .submit{
    cursor: pointer !important
}

